--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,15 @@ server.servlet.context-path=/casher
 
 # MySQL Configuration development
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-
-spring.datasource.url= jdbc:mysql://127.0.0.1:3306/casher_db
+spring.datasource.url= jdbc:mysql://127.0.0.1:3306/casher
 spring.datasource.username= root
 spring.datasource.password= @Elit123
 
+spring.second-datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.second-datasource.url= jdbc:mysql://127.0.0.1:3306/manager
+spring.second-datasource.username= root
+spring.second-datasource.password= @Elit123
+
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
